@@ -5,6 +5,9 @@ NEWS for SoftHSM -- History of user visible changes
 New in 1.0-RC2; 2009-0X-XX Rickard Bondesson
 
 * Added a check for the Botan library in config script
+* SoftHSM will not add a default label/ID to a key pair when the
+  key pair is generated, as were the case in the previous
+  versions.
 
 New in 1.0-RC1; 2009-03-10 Rickard Bondesson
 
